--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@ ul li {
     font-size: 18px;
     transition: 0.2s;
 
-    -webkit-user-select: none;
+    /* -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-    user-select: none;
+    user-select: none; */
 }
 
 .header {
