--- a/style.css
+++ b/style.css
@@ -23,9 +23,19 @@ ul li {
     user-select: none; */
 }
 
+@media (min-width: 200px) {
+    #button {
+        color: green; !important;
+    }
+    body{
+        background-image: url("https://cataas.com/cat");
+        background-attachment: scroll;
+    }
+}
+
 .header {
     background-color: azure;
-    font-family: Georgia;
+    font-family: Georgia, monospace;
     position: relative;
     padding: 30px 40px;
     text-align: center;
